Sat Nov 29 16:14:50 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_typeddata_is_kind_of, rb_check_typeddata): ditto.

	* error.c (rb_typeddata_inherited_p): deprecate. still keep for
	  potential binary compatibility.

Sat Nov 29 10:49:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (win32_direct_conv, rb_w32_readdir): convert UTF-8
	  and filesystem code page by using Win32 API directly.

Sat Nov 29 09:37:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (syserr_initialize): simplify message building and get
	  rid of potential invalid byte sequence.

Sat Nov 29 06:09:44 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval_error.c (error_print): respect the encoding of the message.

	* io.c (rb_write_error_str): use rb_w32_write_console() on Windows
	  if stderr is a tty.

Fri Nov 28 05:10:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-setup): add option to select ext/Setup file.

Fri Nov 28 05:02:29 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dmyenc.c (Init_enc): separate from dmyext.c for statically
	  linked extension excluding encoding libraries.

Thu Nov 27 21:58:30 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk (miniprelude.c): It does not depend on prelude.rb now.

Thu Nov 27 21:49:49 2014  Tanaka Akira  <akr@fsij.org>

	* tool/update-deps: List up files built always in the source directory
	  and source files built always in the build directory.

Thu Nov 27 21:24:55 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: add obsolete callcc.

Thu Nov 27 19:59:49 2014  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): remove duplicated line event.
	  [Bug #10449]

	* test/ruby/test_settracefunc.rb: add and fix tests.

Thu Nov 27 19:04:50 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_args.c: fix backtrace location for keyword related exceptions.

	  For example, the following program
	    def foo(k1: 1); end # line 1
	    foo(k2: 2)          # line 2