@@ -1,3 +1,12 @@
+Sat Nov 29 16:53:14 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ruby.c (ruby_set_argv): convert argv from UTF-8.
+
+	* win32/win32.c (rb_w32_sysinit, cmdglob, w32_cmdvector): convert
+	  wide char command line to UTF-8 argv, and glob in UTF-8 so that
+	  metacharacters would match multibyte characters.
+	  [ruby-dev:48752] [Bug #10555]
+
 Sat Nov 29 16:14:50 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* error.c (rb_typeddata_is_kind_of, rb_check_typeddata): ditto.
